# Dice

./: .env  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: lint.yml
pages/: login_dice_page.py  profile_page.py
tests/: fake.py  test_dice.py
