[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dice-tests"
version = "0.1"
description = "Automated tests for uploading resumes to Dice.com"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "playwright",
    "pytest",
    "pytest-playwright",
    "python-dotenv",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "--headed" 

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "venv",
]

# Allow lines to be as long as 100 characters.
line-length = 100

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Ignore line length violations.
ignore = ["E501"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
